[gd_scene load_steps=12 format=3 uid="uid://db82ftu2sobir"]

[ext_resource type="Script" uid="uid://bnie1lvcvimwj" path="res://scenes/ui/stage_ui/hud/settings_popup.gd" id="1_pvuhu"]
[ext_resource type="Texture2D" uid="uid://clp158nfrjn5n" path="res://assets/ui/Prefabs/2.png" id="2_f53xw"]
[ext_resource type="Texture2D" uid="uid://ck6jl13ouf7ol" path="res://assets/ui/button/close_normal.png" id="3_t2h0f"]
[ext_resource type="Texture2D" uid="uid://2snfbakud06d" path="res://assets/ui/button/close_hover.png" id="4_3rjxk"]
[ext_resource type="FontFile" uid="uid://kb1r61u7sq8p" path="res://assets/font/default.ttf" id="5_lowcy"]
[ext_resource type="FontFile" uid="uid://chlnx10evtm4v" path="res://assets/font/big_font.fnt" id="6_hpvrd"]
[ext_resource type="Texture2D" uid="uid://dmp0r7csisdn1" path="res://assets/ui/button/on_button.png" id="7_ggnuh"]
[ext_resource type="Texture2D" uid="uid://7eg0bw1eqis6" path="res://assets/ui/button/off_button.png" id="8_lv1fg"]

[sub_resource type="LabelSettings" id="LabelSettings_m50xv"]
font = ExtResource("5_lowcy")
font_size = 18
font_color = Color(0, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6a5er"]
font = ExtResource("6_hpvrd")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_x0ywr"]
font = ExtResource("6_hpvrd")
font_size = 20

[node name="SettingsPopup" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvuhu")

[node name="OverlayColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.0352941, 0.54902, 0.870588, 0.694118)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_f53xw")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CloseTextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -10.0
offset_right = 10.0
grow_horizontal = 0
toggle_mode = true
texture_normal = ExtResource("3_t2h0f")
texture_hover = ExtResource("4_3rjxk")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -28.0
offset_right = -20.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "CÀI ĐẶT"
label_settings = SubResource("LabelSettings_m50xv")
horizontal_alignment = 1

[node name="MusicHBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="NinePatchRect/VBoxContainer/MusicHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MUSIC"
label_settings = SubResource("LabelSettings_6a5er")

[node name="MusicCheckButton" type="CheckButton" parent="NinePatchRect/VBoxContainer/MusicHBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("7_ggnuh")
theme_override_icons/unchecked = ExtResource("8_lv1fg")

[node name="SoundHBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="SoundLabel" type="Label" parent="NinePatchRect/VBoxContainer/SoundHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SOUND FX"
label_settings = SubResource("LabelSettings_x0ywr")

[node name="SoundCheckButton" type="CheckButton" parent="NinePatchRect/VBoxContainer/SoundHBoxContainer"]
layout_mode = 2

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TurnBackButton" type="Button" parent="NinePatchRect/VBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_lowcy")
text = "QUAY LẠI"

[connection signal="gui_input" from="OverlayColorRect" to="." method="_on_overlay_color_rect_gui_input"]
[connection signal="pressed" from="NinePatchRect/CloseTextureButton" to="." method="_on_close_texture_button_pressed"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/MusicHBoxContainer/MusicCheckButton" to="." method="_on_music_check_button_toggled"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/SoundHBoxContainer/SoundCheckButton" to="." method="_on_sound_check_button_toggled"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ButtonHBoxContainer/TurnBackButton" to="." method="_on_turn_back_button_pressed"]
